--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1>Majoon</h1>
-    <p>some testxz purpose html file</p>
+    <p>Some test purpose html file</p>
   </body>
 </html>
